specs/blueprints/errors/validation/missing_embed.eno
# Querying a section for a required but missing embed 

-- input
# section
-- input

-- javascript
parse(input).section('section').requiredEmbed('embed');
-- javascript

-- php
Enolib\Parser::parse($input)->section('section')->requiredEmbed('embed');
-- php

-- python
enolib.parse(input).section('section').required_embed('embed')
-- python

-- ruby
Enolib.parse(input).section('section').required_embed('embed')
-- ruby

## ValidationError

-- text
The embed 'embed' is missing - in case it has been specified look for typos and also check for correct capitalization.
-- text

-- snippet
   Line | Content
 *    1 | # section
-- snippet

selection: [0,9] => [0,9]
